2009-05-27  higepon  <higepon@users.sourceforge.jp>

        * First implementation of (mosh concurrent)

2009-05-26  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/concurrent.ss: Added register and whereis procedure.

        * VM.cpp : Fixed invalid share of CProcedure::returnCode.
                 : Made getCProcedureName function VM instance method.

2009-05-25  higepon  <higepon@users.sourceforge.jp>

        * recevie with timeout works.

        * Added recevie with pattern match.

        * RecordProcedures.cpp : Fixed. generative rtds were global.

2009-05-23  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/queue.ss: Added simple queue library.

        * test/queue.scm: Added tests for queue.

2009-05-22  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/concurrent.ss : Added.

        * MultiVMProcedures.cpp : Added mutex things.

        * VMFactory.cpp (create): Added.

        * MultiVMProcedures.cpp : vm-join! works.

2009-05-21  higepon  <higepon@users.sourceforge.jp>

        * Added (make-condition-variable . name) (condition-variable-notify! c) etc.

        * OSCompatThread.h : Added Condition variable class.

        * Symbol.h (scheme): Fixed. Avoid from being called static destructor.

2009-05-20  higepon  <higepon@users.sourceforge.jp>

        * main.cpp : wait all threads.

2009-05-19  higepon  <higepon@users.sourceforge.jp>

        * scheme.h: Added prototype of GC_dlopen. (Boehm GC 7.1 lacks it).

        * configure.ac: Added GC_XXX_THREADS.

        * MultiVMProcedures.cpp : Added (make-vm thunk-sexp import-spec-sexp . name) procedure.

2009-05-18  higepon  <higepon@users.sourceforge.jp>

        * Added Mutex.

        * OSCompatThread.h: Added basic functionality.

        * OSCompatThreadTest.cpp : Added.

        * OSCompatThread.h : Added for threads. Not yet working.

2009-05-15  higepon  <higepon@users.sourceforge.jp>
