@@ -1,0 +1,57 @@
+; multi-process-echo-server.ss - Sample of Multi-Process Echo server.
+;
+;   Copyright (c) 2009  Higepon(Taro Minowa)  <higepon@users.sourceforge.jp>
+;
+;   Redistribution and use in source and binary forms, with or without
+;   modification, are permitted provided that the following conditions
+;   are met:
+;
+;   1. Redistributions of source code must retain the above copyright
+;      notice, this list of conditions and the following disclaimer.
+;
+;   2. Redistributions in binary form must reproduce the above copyright
+;      notice, this list of conditions and the following disclaimer in the
+;      documentation and/or other materials provided with the distribution.
+;
+;   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+;   "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+;   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+;   A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+;   OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+;   SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
+;   TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+;   PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+;   LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+;   NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+;   SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+;
+;  $Id: socket.ss 621 2008-11-09 06:22:47Z higepon $
+
+(import (rnrs)
+        (mosh)
+        (mosh concurrent)
+        (mosh socket))
+
+(let ([server (make-server-socket "4649")])
+  (display "Echo server: START\n")
+  (let loop ([conn (socket-accept server)])
+    (let ([pid (spawn (lambda ()
+                        (display "child start\n")
+                        (guard [c (#t (display "***\n")(display c))]
+                      (receive
+                          [('connection conn)
+                           (let loop ([data (socket-recv conn 100)])
+                             (cond
+                              [(zero? (bytevector-length data))
+                               (socket-close conn)
+                               (display "Echo server: STOP\n")]
+                              [else
+                               (format #t "received ~s\n" (utf8->string data))
+                               (socket-send conn data 0)
+                               (loop (socket-recv conn 100))]))
+                           ]))
+                      ) '((rnrs) (mosh concurrent) (mosh) (mosh socket)))])
+    (! pid `(connection ,conn)))
+    (loop (socket-accept server)))
+  (display "***************\n")
+  (socket-close server))
