@@ -1,5 +1,7 @@
 2009-05-27  higepon  <higepon@users.sourceforge.jp>
 
+        * example/multi-process-echo-server.ss : Added.
+
         * First implementation of (mosh concurrent)
 
 2009-05-26  higepon  <higepon@users.sourceforge.jp>
